Added user registration, and activation
